--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dependencies": {
         "@react-navigation/bottom-tabs": "^6.6.1",
         "@react-navigation/native": "^6.1.18",
+        "@tanstack/react-query": "^5.56.2",
         "expo": "~51.0.28",
         "expo-speech": "~12.0.2",
         "expo-status-bar": "~1.12.1",
