--- a/package.json
+++ b/package.json
@@ -1,41 +1,43 @@
 {
-    "name": "sambi_foods",
-    "version": "1.0.0",
-    "main": "expo/AppEntry.js",
-    "scripts": {
-        "start": "expo start",
-        "android": "expo start --android",
-        "ios": "expo start --ios",
-        "web": "expo start --web",
-        "test": "jest --watchAll"
-    },
-    "jest": {
-        "preset": "jest-expo",
-        "transformIgnorePatterns": [
-            "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@sentry/react-native|native-base|react-native-svg)"
-        ]
-    },
-    "dependencies": {
-        "@react-navigation/bottom-tabs": "^6.6.1",
-        "@react-navigation/native": "^6.1.18",
-        "@tanstack/react-query": "^5.56.2",
-        "expo": "~51.0.28",
-        "expo-speech": "~12.0.2",
-        "expo-status-bar": "~1.12.1",
-        "react": "18.2.0",
-        "react-native": "0.74.5",
-        "react-native-safe-area-context": "4.10.5",
-        "react-native-screens": "3.31.1",
-        "translate": "^3.0.1"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.20.0",
-        "@testing-library/react-native": "^12.7.2",
-        "@types/jest": "^29.5.13",
-        "@types/react": "~18.2.45",
-        "jest": "^29.7.0",
-        "jest-expo": "^51.0.4",
-        "typescript": "^5.1.3"
-    },
-    "private": true
+  "name": "sambi_foods",
+  "version": "1.0.0",
+  "main": "expo/AppEntry.js",
+  "scripts": {
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "test": "jest --watchAll"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@sentry/react-native|native-base|react-native-svg)"
+    ]
+  },
+  "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
+    "@tanstack/react-query": "^5.56.2",
+    "expo": "~51.0.28",
+    "expo-speech": "~12.0.2",
+    "expo-status-bar": "~1.12.1",
+    "react": "18.2.0",
+    "react-native": "0.74.5",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
+    "translate": "^3.0.1",
+    "react-native-gesture-handler": "~2.16.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.0",
+    "@testing-library/react-native": "^12.7.2",
+    "@types/jest": "^29.5.13",
+    "@types/react": "~18.2.45",
+    "jest": "^29.7.0",
+    "jest-expo": "^51.0.4",
+    "typescript": "^5.1.3"
+  },
+  "private": true
 }
