--- a/package.json
+++ b/package.json
@@ -20,15 +20,16 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "@tanstack/react-query": "^5.56.2",
+    "axios": "^1.7.7",
     "expo": "~51.0.28",
     "expo-speech": "~12.0.2",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "translate": "^3.0.1",
-    "react-native-gesture-handler": "~2.16.1"
+    "translate": "^3.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
