--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "expo-speech": "~12.0.2",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
+    "react-content-loader": "^7.0.2",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-svg": "^15.7.1",
     "translate": "^3.0.1"
   },
   "devDependencies": {
