"Updated app.json: added 'softwareKeyboardLayoutMode' property, modified 'android' section"

--- a/app.json
+++ b/app.json
@@ -15,9 +15,10 @@
       "supportsTablet": true
     },
     "android": {
+      "softwareKeyboardLayoutMode": "pan",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#ffffff",
       }
     },
     "web": {
