--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "^15.7.1",
+    "react-native-webview": "13.8.6",
     "translate": "^3.0.1"
   },
   "devDependencies": {
