--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-native-screens": "3.31.1",
     "react-native-svg": "^15.7.1",
     "react-native-webview": "13.8.6",
-    "translate": "^3.0.1"
+    "translate": "^3.0.1",
+    "expo-secure-store": "~13.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
