--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     ]
   },
   "dependencies": {
+    "@react-native-firebase/app": "^21.0.0",
+    "@react-native-firebase/auth": "^21.0.0",
+    "@react-native-firebase/crashlytics": "^21.0.0",
+    "@react-native-firebase/firestore": "^21.0.0",
     "@react-native-google-signin/google-signin": "^13.1.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
@@ -23,6 +27,7 @@
     "@tanstack/react-query": "^5.56.2",
     "axios": "^1.7.7",
     "expo": "~51.0.28",
+    "expo-secure-store": "~13.0.2",
     "expo-speech": "~12.0.2",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
@@ -33,8 +38,7 @@
     "react-native-screens": "3.31.1",
     "react-native-svg": "^15.7.1",
     "react-native-webview": "13.8.6",
-    "translate": "^3.0.1",
-    "expo-secure-store": "~13.0.2"
+    "translate": "^3.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
