--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@react-navigation/stack": "^6.4.1",
     "@tanstack/react-query": "^5.56.2",
     "axios": "^1.7.7",
-    "expo": "~51.0.28",
+    "expo": "~51.0.36",
     "expo-secure-store": "~13.0.2",
     "expo-speech": "~12.0.2",
     "expo-status-bar": "~1.12.1",
@@ -36,7 +36,7 @@
     "react-native-gesture-handler": "~2.16.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-svg": "^15.7.1",
+    "react-native-svg": "15.2.0",
     "react-native-webview": "13.8.6",
     "translate": "^3.0.1"
   },
@@ -47,7 +47,7 @@
     "@types/react": "~18.2.45",
     "jest": "^29.7.0",
     "jest-expo": "^51.0.4",
-    "typescript": "^5.1.3"
+    "typescript": "~5.3.3"
   },
   "private": true
 }
