--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-webview": "13.8.6",
-    "translate": "^3.0.1"
+    "translate": "^3.0.1",
+    "expo-linking": "~6.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
