--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -44,7 +44,7 @@ if (getRNMinorVersion() >= 75) {
   }
 }
 
-rootProject.name = 'sambi_foods'
+rootProject.name = 'Sambi Foods'
 
 dependencyResolutionManagement {
   versionCatalogs {
